# lab05_timp

./: CMakeLists.txt  cmake_content.txt  project_structure.txt
.github/workflows/: ci.yml
include/: Account.h  Transaction.h
src/: Account.cpp  Transaction.cpp
test/: AccountTest.cpp  MockBanking.cpp  TransactionTest.cpp
